# Law-Application

./: .gitignore  DEPLOYMENT.md  LICENSE  README.LOCAL.md  README.md  docker-compose.override.yml  docker-compose.yml  render.yaml
.github/workflows/: docker-build.yml
backend/: .env.example  Dockerfile  Dockerfile.gpu  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: embedding_store.py  hybrid.py  llm.py  middleware.py  vector_store.py
backend/app/index/: docs.json  matrix.joblib  texts.txt  vectorizer.joblib
backend/app/routers/: embed.py  generate.py  generate_stream.py  hybrid.py  ingest.py  query.py  warm.py
backend/data/: sample_1.txt  sample_2.txt
backend/scripts/: finetune_lora.py  merge_lora_adapter.py
backend/tests/: test_hybrid.py  test_llm_prompt.py
docs/: legal_disclaimers.md  project_plan.md
frontend/: README.md  streamlit_app.py
frontend/.streamlit/: secrets.toml.example
mobile-app/: README.md
