[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-rag-backend"
version = "0.1.0"
description = "Minimal RAG backend with FastAPI and TF-IDF"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "scikit-learn>=1.4.2",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "python-dotenv>=1.0.1",
]
