[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-rag-backend"
version = "0.1.0"
description = "Minimal RAG backend with FastAPI and TF-IDF"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "scikit-learn>=1.4.2",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
# Install with: pip install .[llm]
llm = [
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "peft>=0.10.0",
    "datasets>=2.19.0",
    "torch>=2.1.0",
]
embeddings = [
    "sentence-transformers>=2.7.0",
]
llamacpp = [
    "llama-cpp-python>=0.2.74",
]
dev = [
    "pytest>=8.2.0",
]
